...
<!--    </LinearLayout>-->
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" >-->

    <Button
        android:id="@+id/editAReminder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Submit Change" />
    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="380dp"
...
            android:textColor="@color/cardinal"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewReminders"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:animationCache="false"
        android:scrollingCache="false"
        android:smoothScrollbar="true"></ListView>

...
