<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="My Village" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="Reminders" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Me" />

</menu>